div fixes